<resources>
    <string name="app_name">Water Treatment</string>
    <string name="search">Поиск</string>
    <string name="exit">Выход</string>
    <string name="sendpokazanie">Передать показания</string>
    <string name="resorscheck">Приборы учёта</string>
    <string name="information">Информация</string>
    <string name="searchforaddress">Поиск по адресу</string>
    <string name="searchfornumber">Поиск по номеру Л/С</string>
    <string name="ds">Showing file picker before loading the file list</string>

</resources>
