<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exitbutton"
            android:textColor="@color/colorPrimaryDark"
            style="@android:style/Widget.Button"
            android:background="@android:drawable/btn_default_small"
            android:layout_marginLeft="10dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/buttonsearch"
            style="@android:style/Widget.Button"
            android:background="@android:drawable/btn_default_small"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_by_address_panel">

            <TextView
                android:text="@string/searchforaddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:id="@+id/imageView"
              android:layout_weight="5"/>
        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.energycompany.fragment.Adressstreethousepartnemt"
            android:id="@+id/adressstreethousepartnemt"
            tools:layout="@layout/fragment1"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_by_facescore_panel">

            <TextView
                android:text="@string/searchfornumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12pt"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:id="@+id/imageView1"
              android:layout_weight="5"/>
        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.energycompany.fragment.Facescore"
            android:id="@+id/facescore"

            tools:layout="@layout/fragment3"
            />
    </LinearLayout>

</RelativeLayout>
