<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/informationperson">

            <TextView
                android:text="@string/information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12pt"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:id="@+id/textView"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:id="@+id/imageView3"

                android:layout_weight="5"/>
        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:name="com.energycompany.fragment.InformatoinAboutPerson"
            android:id="@+id/informationpersonabout"
            tools:layout="@layout/informatoinaboutperson"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/otherinfotmation">

            <TextView
                android:text="@string/resorscheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:id="@+id/imageView4"

                android:layout_weight="5"/>
        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.energycompany.fragment.ElseInformationPerson"
            android:id="@+id/elseinformationperson"

            tools:layout="@layout/elseenformationeerson"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/senddeteilfor">

            <TextView
                android:text="@string/sendpokazanie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12pt"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:id="@+id/imageView5"

                android:layout_weight="5"/>
        </LinearLayout>
        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.energycompany.fragment.SendParamentForCompany"
            android:id="@+id/entersendfile"

            tools:layout="@layout/sendparamentforcompany"
            />

        <Button
            android:text="Отправить файл на почту "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:id="@+id/sendfilebutton"
            style="@android:style/Widget.Button"/>
            </LinearLayout>

    </ScrollView>
</RelativeLayout>
